@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -62,22 +62,25 @@
 </p>
 <ul>
     <li><span class="label label-success">Feature</span> Edit ACLs for files (Google Storage) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/11008">#11008</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/11008">#11008</a>)
     </li>
     <li><span class="label label-success">Feature</span> Support to set storage class (Google Storage)</li>
+    <li><span class="label label-success">Feature</span> Support for Intelligent-Tiering class (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11031">#11031</a>)
+    </li>
     <li><span class="label label-success">Feature</span> Support for Glacier Deep Archive storage class (S3) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10681">#10681</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10681">#10681</a>)
     </li>
     <li><span class="label label-success">Feature</span> Allow selection of Glacier storage class as default for uploads
         (S3) (<a
-            target="_blank" href="https://trac.cyberduck.io/ticket/10681">#10681</a>)
+                target="_blank" href="https://trac.cyberduck.io/ticket/10681">#10681</a>)
     </li>
     <li><span class="label label-success">Feature</span> Support for shared files (OneDrive)</li>
     <li><span class="label label-warning">Bugfix</span> Missing URLs to copy of CDN distributions (S3, Rackspace)</li>
     <li><span class="label label-warning">Bugfix</span> Reduced memory usage (macOS)</li>
     <li><span class="label label-warning">Bugfix</span> Failure uploading files to vault in version 7 format
         (Cryptomator) (<a
-            target="_blank" href="https://trac.cyberduck.io/ticket/11020">#11020</a>)
+                target="_blank" href="https://trac.cyberduck.io/ticket/11020">#11020</a>)
     </li>
 </ul>
 
@@ -86,21 +89,21 @@
 </p>
 <ul>
     <li><span class="label label-success">Feature</span> Support for vault format version 7 (Cryptomator) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10825">#10825</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10825">#10825</a>)
     </li>
     <li><span class="label label-success">Feature</span> Labels for bookmarks (macOS) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/9719">#9719</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/9719">#9719</a>)
     </li>
     <li><span class="label label-success">Feature</span> Group bookmarks by labels in menu (macOS)</li>
     <li><span class="label label-success">Feature</span> Support TLS 1.3 (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10962">#10962</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10962">#10962</a>)
     </li>
     <li><span class="label label-success">Feature</span> Support for ap-east-1 (Hong Kong) region (S3)
         (<a target="_blank" href="https://trac.cyberduck.io/ticket/10986">#10986</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Download fails for files with whitespace in name (Google
         Storage) (<a
-            target="_blank" href="https://trac.cyberduck.io/ticket/10931">#10931</a>)
+                target="_blank" href="https://trac.cyberduck.io/ticket/10931">#10931</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Unable to access documents in Shared with me (Google Drive)</li>
     <li><span class="label label-warning">Bugfix</span> Read timeout after copying large file (OpenStack Swift)</li>
@@ -110,10 +113,10 @@
     </li>
     <li><span class="label label-warning">Bugfix</span> Set timestamp with X-OC-Mtime header (Nextcloud, ownCloud)</li>
     <li><span class="label label-warning">Bugfix</span> Copy files to different bucket (Backblaze B2) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10924">#10924</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10924">#10924</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Allow downloading files marked as abusive (Google Drive) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10377">#10377</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10377">#10377</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Apply public read permissions to files selected to share (Google
         Drive)
@@ -127,7 +130,7 @@
     <li><span class="label label-success">Feature</span> Importer for bookmarks from Transmit 5 (macOS)</li>
     <li><span class="label label-success">Feature</span> Importer for bookmarks from Cloudmounter (macOS)</li>
     <li><span class="label label-warning">Bugfix</span> Copy files to different bucket (Backblaze B2) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10924">#10924</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10924">#10924</a>)
     </li>
 </ul>
 
@@ -165,13 +168,13 @@
         requests (S3) (<a target="_blank" href="https://trac.cyberduck.io/ticket/10888">#10888</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Display certificates as sheet in browser window (macOS) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10897">#10897</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10897">#10897</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Recursive search shows no result (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10799">#10799</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10799">#10799</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Error moving file to encrypted vault (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10803">#10803</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10803">#10803</a>)
     </li>
 </ul>
 
@@ -219,7 +222,7 @@
 </p>
 <ul>
     <li><span class="label label-warning">Bugfix</span> Failure authenticating using SSH agent (SFTP) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10800">#10800</a>)
+            target="_blank" href="https://trac.cyberduck.io/ticket/10800">#10800</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Failure overwriting existing file (Google Storage)</li>
     <li><span class="label label-warning">Bugfix</span> Missing hostname verification in TLS handshake when connecting
@@ -256,17 +259,17 @@
         us-east-1 (S3))
     </li>
     <li><span class="label label-warning">Bugfix</span> Rate limit number of requests (Google Drive) (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10103">#10103</a>))
+            target="_blank" href="https://trac.cyberduck.io/ticket/10103">#10103</a>))
     </li>
     <li><span class="label label-warning">Bugfix</span> Repeated prompt to validate host key when connecting to non
         standard port (SFTP) (<a target="_blank" href="https://trac.cyberduck.io/ticket/10772">10772</a>))
     </li>
     <li><span class="label label-warning">Bugfix</span> Segmented downloads fail with longer filenames (<a
-        target="_blank" href="https://trac.cyberduck.io/ticket/10726">#10726</a>))
+            target="_blank" href="https://trac.cyberduck.io/ticket/10726">#10726</a>))
     </li>
 </ul>
 
 <p>Release notes for previous versions can be found at <a
-    target="_blank" href="https://cyberduck.io/changelog">cyberduck.io/changelog</a>.</p>
+        target="_blank" href="https://cyberduck.io/changelog">cyberduck.io/changelog</a>.</p>
 </body>
 </html>
