@@ -4,6 +4,7 @@ https://cyberduck.io/
 7.3.1
 - [Feature] Edit ACLs for files (Google Storage) (#11008)
 - [Feature] Support to set storage class (Google Storage)
+- [Feature] Support for Intelligent-Tiering storage class (S3) (#11031)
 - [Feature] Support for Glacier Deep Archive storage class (S3) (#10681)
 - [Feature] Allow selection of Glacier storage class as default for uploads (S3) (#10681)
 - [Feature] Support for shared files (OneDrive)
